--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Is this AI?",
   "version": "1.0",
   "description": "Checks if the webpage contains AI-generated content based on certain phrases.",
-  "permissions": ["activeTab", "scripting"],
+  "permissions": ["activeTab", "scripting", "storage"],
   "background": {
     "service_worker": "background.js"
   },
@@ -25,5 +25,6 @@
       "matches": ["<all_urls>"],
       "css": ["styles.css"]
     }
-  ]
+  ],
+  "options_page": "options.html"
 }
